# PorkLib_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  dev.cpp  porklib.cpp  porklib.h
common/: CMakeLists.txt  common.cpp  common.h  vectors.cpp  vectors.h
common/porklib/: common.cpp  common.h  types.h  vectors.cpp  vectors.h
dev/: CMakeLists.txt  dev.cpp
math/: vectors.h
porklib/: porklib.h
porklib/porklib/: hacks.h  types.h
porklib/porklib/common/: common.h  types.h
porklib/porklib/crypto/: cipher.cpp  crypto.h  digest.cpp  digest.h
porklib/porklib/crypto/digest/: sha1.h
porklib/porklib/math/: funcs.cpp  funcs.h  vectors.cpp  vectors.h
source/: porklib.h
source/porklib/: bioscalls.nds.s  builtins.h  types.h
source/porklib/binary/: binary.cpp  binary.h
source/porklib/common/: common.cpp  common.h
source/porklib/crypto/: cipher.h  crypto.h  digest.cpp  digest.h
source/porklib/crypto/digest/: sha1.cpp  sha1.h
source/porklib/encoding/: encoding.cpp  encoding.h
source/porklib/math/: funcs.cpp  funcs.h  math.h  vectors.h
source/porklib/network/: network.h
